--- a/src/index.html
+++ b/src/index.html
@@ -65,8 +65,8 @@
     </div>
 
     <!--Bloc Nos Expertises -->
-    <section class="bg-body-tertiary ">
-      <div class="container text-center">
+    <section class="bg-body-tertiary">
+      <div class="container text-center heading">
         <h2 class="blue-bar-title mt-5 pt-5">Nos expertises</h2>
         <p class="pb-5 description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
@@ -130,7 +130,7 @@
     <!--End Bloc Nos Expertises -->
 
     <!--Bloc Nos Réalisations -->
-    <div class="container-fluid">
+    <div class="container-fluid heading">
       <h2 class="text-center mt-5 pt-5">Nos réalisations</h2>
       <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
       tempor incididunt ut labore</p><span class="icon-fleche"><a href="#"><img src="assets/images/icones/inactif.png" alt="" srcset=""></a><a href="#"><img src="assets/images/icones/actif.png" alt="" srcset=""></a></span>
@@ -182,7 +182,7 @@
 
     <!--Bloc Témoignages -->
     <section class="bg-body-tertiary">
-      <div class="container text-center mb-0">
+      <div class="container text-center mb-0 heading">
         <h2 class="blue-bar-title mt-5 pt-5">Temoignages</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
         et dolore magna aliqua. Ut enim ad minim  consequat.</p>
@@ -247,7 +247,7 @@
     <!--End Bloc Témoignages -->
 
     <!--Bloc Technologies -->
-    <div class="container">
+    <div class="container heading">
       <h2 class="text-center mt-5 pt-5">Les meilleures technologies</h2>
       <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
@@ -278,7 +278,7 @@
 
     <!--Bloc Article de blog d'ACSEO -->
     <section class="bg-body-tertiary pb-5">
-      <div class="container ">
+      <div class="container heading">
         <h2 class="text-center mt-5 pt-5">Le blog d'ACSEO</h2>
         <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
@@ -329,7 +329,7 @@
     <!--End Bloc Article d'ACSEO -->
 
     <!--Bloc Idée/Projet -->
-    <div class="container text-center last-container">
+    <div class="container text-center last-container heading">
       <img class="d-bloc mt-5"src="assets/images/hashtag.png" alt="Element hashtag" srcset="">
       <h2 class="mt-3">Une idée, un projet ? <br/> Nous sommes à votre disposition pour discuter</h2>
       <p class="my-5"><a href="#" class="pink-button">Contactez-nous</a></p>
